--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -358,7 +358,7 @@ More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/Help
 ''Action'':
 {|
 |<( |3 30%>''If'' you reference something that __has a page in the wiki__
-|''Action'': Always create a hyperlink to any existing API page.  It is preferable to create a link to any page in the wiki that is referenced.
+|''Action'': With extremely rare exception, always create a hyperlink to any existing API page.  It is preferable to create a link to any page in the wiki that is referenced whether an API page or not.
 |-
 |''Note'': Include () after a function name, outside the link, except in the Related Functions section of a page.  Do not use parens for structures or enumerations.
 |-
@@ -413,7 +413,7 @@ More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/Help
 |<( |2 30%>Link to an __anchor on another page__
 |''Markup'': Insert the page address before the # in the address section of an anchor link.<br/>```[[address#anchor|optional alternate text]]```
 |-
-|''Example'': ```[[Contributing#guides|Style Guides]]``` creates the following link with alternate text and that takes you to that anchor on the other page [[Contributing#guides|Style Guides]]
+|''Example'': ```[[Contributing#guides|Style Guides]]``` creates the following link with alternate text and that takes you to that anchor on the other page:<br/> [[Contributing#guides|Style Guides]]
 |}
 
 More wiki markup for tables can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLinking HelpOnLinking]
@@ -432,9 +432,9 @@ More wiki markup for tables can be found at [http://wiki.libsdl.org/moin.cgi/Hel
 
 ''Note'': It is best to place your anchor on the line ''above'' the beginning of the section you are marking with the anchor.  This is because the next line after the anchor will be aligned with the top of the viewing window when it is used.  If the anchor is below something like a heading the heading will be off screen when the anchor is used.  The exception to this is if the anchor is very close to the bottom of the page, in which case it will be moved as close to the top of the screen as possible.
 
-More (but not much) wiki markup for anchors can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLinking HelpOnLinking] and [http://wiki.libsdl.org/moin.cgi/HelpOnMacros HelpOnMacros].
+''Note'': Anchors can be used in tables but must follow any table formatting markup in order to not disturb the table format.  Also, the anchor jump point will align with the parsed formatting so put it at the highest point in a row if you wish the whole row to appear on the screen when the anchor is used. See the 2nd and 3rd ''If''s of the Function Parameters section of the [[SGFunctions#Function_Parameters|Function Pages Style Guide]] for an example.  (If the anchor was in the left column it would jump to the top of the vertically centered text when used, leaving half of the content off the top of the screen.)
 
-<!-- #Note:  Anchors can be used in tables but must follow any table formatting markup in order to not disturb the table format.  Also, the anchor jump point will align with the parsed formatting so put it at the highest point in a section if you wish the whole section to appear on the screen when the anchor is used. See http://wiki.libsdl.org/moin.cgi/SGFunctions#Function_Parameters 2nd and 3rd ''If''s for an example.   -->
+More (but not much) wiki markup for anchors can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLinking HelpOnLinking] and [http://wiki.libsdl.org/moin.cgi/HelpOnMacros HelpOnMacros].
 
 ~-[[#ToC|Return to Table of Contents]]-~
 
@@ -592,7 +592,7 @@ More (but not much) wiki markup for headings can be found at [http://wiki.libsdl
 
 <span id="include"></span>
 === Includes ===
-An include enables you to dynamically copy all or a portion of a page onto another page, allowing changes to one page (source) to be automatically updated on another (recipient).  This is especially useful for listing enumeration values for a function parameter on the function page, for example.
+An include enables you to dynamically copy all or a portion of a page onto another page, allowing changes to one page (source) to be automatically updated on another page (recipient).  This is especially useful for listing enumeration values for a function parameter on the function page, for example.
 
 ''<<Color2(red,Important!)>>'' Includes should be used sparingly in this wiki.  It is only appropriate to copy page content using an Include if it is important that the content remain up to date on the recipient page if a source page changes or if the two (or more) pages are unlikely to ever require different information for that included content because they are so closely related.  In many cases it is better to do a one time copy and paste operation instead.
 
@@ -612,7 +612,7 @@ An include enables you to dynamically copy all or a portion of a page onto anoth
 ##The following content is included on `<PageName>`.  Any changes between these comments will be reflected there as well.  Please use caution when editing.  Start Include here.
 ```
 : ''Example'': If this include will be used on [[SDL_GL_GetAttribute]]() and [[SDL_GL_SetAttribute]]() the comment on the source page should read:
-   ```##The following content is included on SDL_GL_GetAttribute and SDL_GL_SetAttribute...```
+   <code>#</code><code>#</code><code>The</code> <code>following</code> <code>content</code> <code>is</code> <code>included</code> <code>on</code> <code>SDL_GL_GetAttribute</code> <code>and</code> <code>SDL_GL_SetAttribute.</code>  <code>Any</code> <code>changes</code> <code>between</code> <code>these</code> <code>comments</code> <code>will</code> <code>be</code> <code>reflected</code> <code>there</code> <code>as</code> <code>well.</code>  <code>Please</code> <code>use</code> <code>caution</code> <code>when</code> <code>editing.</code>  <code>Start</code> <code>Include</code> <code>here.</code>
 
  ''Action 3'': __On the source page__ place the following markup on the line immediately ''after'' the point where you want to end the include (to stop copying content).
   ```
@@ -622,7 +622,20 @@ An include enables you to dynamically copy all or a portion of a page onto anoth
 ''Note'': Includes are very literal.  All content between the two <code>##comments</code>, beginning with the character immediately following "<code>The following...here.</code>" and ending with the character immediately before "<code>##End...</code>", will be copied onto the recipient page, so be careful that you intend to include ''all'' content!
 
 {|
-|<( 30%>''If'' a page has an __existing Include__ that does not contain the content that you need to include on a page
+|<( |3 30%>''If'' a source page __does not already have an include on it__
+|''Action 1'': Follow the instructions above to create a new include.
+|-
+|''Action 2'': Please email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> with the names of the source and recipient page(s) so we can keep track of where the includes in the wiki are.
+|-
+|''<<Color2(red,Important!)>>'' While this is by far the most common scenario it is important to scan over a source page for existing include markup before creating a new include.  More than one set of include markup on a source page will cause conflicts on all pages using that source.  See the rest of this table if include markup is discovered to determine the best course of action.
+|-
+|<( 30%>''If'' a source page has an __existing Include that already contains the content that you need__ to include on another page
+|''Action'': Use ''Action 1'' above, add the name of the new recipient page to the existing markup on the source page (see ''Action 2'' above), and skip ''Action 3''.
+|-
+|<( 30%>''If'' a source page has an __existing Include that does not contain the content that you need__ to include on another page
+|''Action'': Please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to discuss it.  The resolution will depend upon the nature of the interaction between the two includes on the page and should be considered carefully.
+|-
+|<( 30%>''If'' you want to __create an include using more than one continuous section__ on the source page (copying separate blocks)
 |''Action'': Please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to discuss it.  The resolution will depend upon the nature of the interaction between the two includes on the page and should be considered carefully.
 |}
 
@@ -631,6 +644,9 @@ See [http://wiki.libsdl.org/moin.cgi/HelpOnMacros/Include HelpOnMacros/Include] 
 <!-- #The basic Include format is <<Include(pagename, heading, level, from="regex", to="regex", sort=ascending|descending, items=n, skipitems=n, titlesonly, editlink)>> -->
 
 <!-- #The <code>from=</code> and <code>to=</code> start markers are very literal!  They will include ''everything'' following the end of the start marker and up to but not including the beginning of the end marker.  (This is why the header markup is included in the above statements.)  When creating an Include statement choose <code>from=</code> and <code>to=</code> parameters carefully. -->
+
+<!-- #If multiple includes must be used on a page modify the [[#include|above]] markup (''Actions 1-3'') as follows: -->
+<!-- # . >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
 
 ~-[[#ToC|Return to Table of Contents]]-~
 
