--- a/SDL_RWtell.mediawiki
+++ b/SDL_RWtell.mediawiki
@@ -1,9 +1,12 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
-'''DRAFT'''
+<!-- pragma camelcase off -->
+{|
+|<tablewidth="100%"style="color:#FF0000; ;text-align:center">DRAFT 
+|}
+
 
 = SDL_RWtell =
-Use this function to *perform a do-nothing seek to get the current offset in an SDL_RWops ^data^ stream*.
+Use this function to perform a do-nothing seek to get the current offset in an SDL_RWops data stream.
 
 
 == Syntax ==
@@ -11,19 +14,22 @@ Use this function to *perform a do-nothing seek to get the current offset in an 
 long SDL_RWtell(struct SDL_RWops* context)
 ```
 
-<<Color2(green,Begin comment that requires commas and therefore can't easily be in green:)>><br/>The old wiki says this has only 1 param - ctx - but both the old wiki and header also list the following ```(ctx)->seek(ctx, 0, RW_SEEK_CUR)``` which appears to specify 3 params.  Does the SDL_RWtell macro call the seek function of the SDL_RWops struct then uses the given '''context''' + an '''offset''' of 0  + '''whence''' of RW_SEEK_CUR as the settings to find the current location in the data?  I don't know how to properly represent that here.  See purple below for my attempt.)<br/><<Color2(green,End comment.)>>
+```{#!wiki comment
+The old wiki says this has only 1 param - ctx - but both the old wiki and header also list the following {{{(ctx)->seek(ctx, 0, RW_SEEK_CUR)``` which appears to specify 3 params.  Does the SDL_RWtell macro call the seek function of the SDL_RWops struct then use the given '''context''' + an '''offset''' of 0  + '''whence''' of RW_SEEK_CUR as the settings to find the current location in the data?  I don't know how to properly represent that here.  See purple below for my attempt.
+}}}}
 
 == Function Parameters ==
 {|
-|'''context'''
-|^a data stream containing the tell function???^
+|'''context''' 
+|a data stream containing the tell function ??? 
 |}
 
 == Return Value ==
-*Returns the ^current^ offset in the stream.*
+*Returns the current offset in the stream.*
 
 == Code Examples ==
 *
+
 ```c++
 #include <stdio.h>
 #include "SDL_rwops.h"
@@ -48,16 +54,18 @@ int main()
 == Remarks ==
 *<br/>This is not a built-in function. This is a macro that calls whatever seek function that happens to be pointed to in an SDL_RWops structure.<br/>*
 
+```#!wiki comment
 <<Color2(purple,[[SDL_RWtell]] calls the seek function in the SDL_RWops struct which uses the specified '''context''' pointer)>><<Color2(purple, ,, an '''offset''' of 0)>><<Color2(purple,, , and a '''whence''' of RW_SEEK_CUR to find the current location in the data.)>>
-
+```
 == Related Functions ==
-:[[SDL_RWclose]] (Macro) *
-:[[SDL_RWFromFile]] *
-:[[SDL_RWread]] (Macro) *
-:[[SDL_RWseek]](Macro) *
-:[[SDL_RWwrite]] (Macro) *
+: [[SDL_RWclose]] (Macro) *
+: [[SDL_RWFromFile]] *
+: [[SDL_RWread]] (Macro) *
+: [[SDL_RWseek]](Macro) *
+: [[SDL_RWwrite]] (Macro) *
 
-<<Color2(green,Should the current read and write functions (not macros) be listed?)>>
-
+```#!wiki comment
+Should the current read and write functions (not macros) be listed?  Should macros be identified as macros here?
+```
 ----
 [[CategoryAPI]], [[CategoryIO]]
